@@ -1,4 +1,4 @@
-.\"	$NetBSD: setkey.8,v 1.19 2006/09/09 16:22:37 manu Exp $
+.\"	$NetBSD: setkey.8,v 1.20 2006/10/06 12:02:27 manu Exp $
 .\"
 .\" Copyright (C) 1995, 1996, 1997, 1998, and 1999 WIDE Project.
 .\" All rights reserved.
@@ -758,6 +758,7 @@ des-deriv	64		ipsec-ciph-des-derived-01
 rijndael-cbc	128/192/256	rfc3602
 twofish-cbc	0 to 256	draft-ietf-ipsec-ciph-aes-cbc-01
 aes-ctr		160/224/288	draft-ietf-ipsec-ciph-aes-ctr-03
+camellia-cbc	128/192/256	rfc4312
 .Ed
 .Pp
 Note that the first 128 bits of a key for
